# jax-attention

./: README.md  flake.nix  main.py  pyproject.toml  test.py
jax_attn/: __init__.py  attention.py  jit.py  mask.py  project_output.py  qkv.py  salience_map.py  split_heads.py
